--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ pyrogram==2.0.106
 tgcrypto
 oauth2client
 psycopg2-binary
-sqlalchemy==1.3.23
+sqlalchemy
+SQLAlchemy
 httplib2
 pySmartDL
 google-api-python-client
